# gameoflife

./: CMakeLists.txt  README.md
ref/: particle_life.py
ref/libs/: atom.py  physics.py
src/: Stats.cpp  Stats.hpp  life.cpp  life.hpp  life.py  life_gtests.cpp  life_test.cpp  main.cpp  stats.cpp  stats.hpp  stats_test.cpp  test_life.cpp
src/libs/: atom.py  physics.py
